--- a/styles/visual.css
+++ b/styles/visual.css
@@ -31,8 +31,10 @@ ul li:hover {
     color: var(--color-grey);
     cursor: pointer;
 }
-
-
+.footerColumn > * {
+    color: var(--color-white);
+    width: 100%;
+}
 :root {
     --color-black: rgba(0, 0, 0, 1);
     --color-black-opacity: rgba(0, 0, 0, 0.36);
@@ -51,12 +53,21 @@ main {
     flex: 1 1 auto;
     margin: 0 auto;
 }
+section {
+    background-repeat: no-repeat;
+    width: 100%;
+}
 section .contentBorder {
     padding: 40px 0 40px 0;
+}
+footer {
+    background-color: var(--color-black-mixin);
 }
 .logo {
     display: flex;
     align-items: center;
+    max-width: 162px;
+    max-height: 57px;
 }
 .icon:hover {
     transform: scale(1.2);
@@ -85,7 +96,10 @@ section .contentBorder {
     max-width: 180px;
     max-height: 52px;
 }
-
+.fourthButton, .fifthButton {
+    display: flex;
+    justify-content: center;
+}
 #burgerIcon span, #burgerIcon::before, #burgerIcon::after {
     content: "";
     background-color: var(--color-black);
@@ -125,7 +139,10 @@ section .contentBorder {
     top: 50%;
     transform: scale(1) translateX(140px);
 }
-
+.footerContactList {
+    display: flex;
+    gap: 15px;
+}
 header {
     background-color: var(--color-white);
     position: fixed;
@@ -154,20 +171,44 @@ header #menuContent .searchForm input {
 .tech_textBlock h1 {
     font-weight: 700;
 }
-
-.footerColumn > * {
-    width: 100%;
-}
 .tech_textBlock {
     max-width: 716px;
     max-height: 402px;
 }
-.tech_secTitleBlock {
-    text-align: center;
-}
 .tech_white {
     color: var(--color-white);
 }
+.tech_secTitleBlock {
+    color: var(--color-black-mixin);
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    text-align: center;
+    width: 100%;
+    max-height: 159px;
+}
+.tech_secTitleBlock h2 {
+    position: relative;
+    max-height: 73px;
+}
+.tech_secTitleBlock h2::after {
+    content: "";
+    background-color: var(--color-grey);
+    position: absolute;
+    max-width: 150px;
+    max-height: 5px;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    border-radius: 5px;
+}
+hr {
+    background-color: var(--color-grey);
+    height: 2px;
+    width: 100%;
+    margin: 32px 0 34px 0;
+}
+
 @media screen and (max-width: 1920px) and (min-width: 1024px) {
     .contentBorder {
         width: 74vw;
@@ -177,29 +218,43 @@ header #menuContent .searchForm input {
         max-height: 17px;
         width: 100%;
     }
+    .logo img {
+        width: 8.43vw;
+    }
     .tech_ancButton {
         width: 9.37vw;
         height: 2.7vw;
         font-size: 0.83vw;
     }
     .tech_secTitleBlock {
-        max-height: 199px;
-        height: 10.36vw;
-        padding-bottom: 2.08vw;
-    }
-    .tech_secTitleBlock h2 {
-        color: var(--color-black-mixin);
-        font-weight: 700;
-        font-size: 2.4vw;
+        max-height: 8.28vw;
+        height: 8.28vw;
     }
     .tech_secTitleBlock p {
-        color: var(--color-black-mixin);
         font-weight: 100;
         font-size: 1.04vw;
     }
     .tech_textBlock {
         max-width: 716px;
         max-height: 522px;
+    }
+    .tech_textBlock h1 {
+        font-size: 2.5vw;
+    }
+    .tech_textBlock p {
+        font-size: 1.1vw;
+    }
+    .tech_parFontSize {
+        font-size: 1.04vw;
+    }
+    .tech_parFourteen {
+        font-size: 0.72vw;
+    }
+    .tech_h3FontSize {
+        font-size: 1.35vw;
+    }
+    h1, h2 {
+        font-size: 2.5vw;
     }
 }
 @media screen and (max-width: 1023px) and (min-width: 768px) {
@@ -210,6 +265,9 @@ header #menuContent .searchForm input {
         width: 25px;
         height: 25px;
     }
+    .logo img {
+        width: 9.87vw;
+    }
     .tech_ancButton {
         width: 17.59vw;
         height: 5.08vw;
@@ -218,6 +276,15 @@ header #menuContent .searchForm input {
     .tech_textBlock {
         max-width: 716px;
         max-height: 522px;
+    }
+    h1, h2 {
+        font-size: 4.69vw;
+    }
+    .tech_parFontSize, .tech_parFourteen {
+        font-size: 1.95vw;
+    }
+    .tech_h3FontSize {
+        font-size: 2.54vw;
     }
 }
 @media screen and (max-width: 767px) and (min-width: 429px) {
@@ -228,9 +295,30 @@ header #menuContent .searchForm input {
         width: 25px;
         height: 25px;
     }
+    .logo img {
+        min-width: 99px;
+        width: 13.16vw;
+    }
     .tech_textBlock {
         max-width: 716px;
         max-height: 522px;
+    }
+    .tech_ancButton {
+        width: 100%;
+        height: 6.77vw;
+        font-size: 2.08vw;
+    }
+    .tech_parFontSize, .tech_parFourteen {
+        font-size: 2.6vw;
+    }
+    .collapsible {
+        display: none;
+    }
+    .tech_h3FontSize {
+        font-size: 3.38vw;
+    }
+    h1, h2 {
+        font-size: 6.25vw;
     }
 }
 @media screen and (max-width: 428px) and (min-width: 300px) {
@@ -241,8 +329,15 @@ header #menuContent .searchForm input {
         width: 25px;
         height: 25px;
     }
+    .logo img, .footerMobileLogo img {
+        width: 23.59vw;
+    }
     section .contentBorder {
         padding: 20px 0 20px 0;
+    }
+    .tech_secTitleBlock p {
+        font-size: 3.5vw;
+        line-height: 1.5;
     }
     .tech_ancButton {
         max-width: 180px;
@@ -251,8 +346,20 @@ header #menuContent .searchForm input {
         height: 10.51vw;
         font-size: 3.5vw;
     }
+    .collapsible {
+        display: none;
+    }
     .tech_textBlock {
         width: 100%;
         max-height: 369px;
+    }
+    .tech_textBlock h1 {
+        font-size: 6.07vw;
+    }
+    .tech_textBlock p, .navigation li {
+        font-size: 4.2vw;
+    }
+    h1, h2 {
+        font-size: 6.25vw;
     }
 }
