added image-popup for all the slider card; all .js files has been changed; removed last BEM classes from HTML structure; added opengraph.

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -55,6 +55,7 @@
                   max-height: 618px;
                   height: 100%;
                 }
+
                 .galleryTextBlock {
                   background-color: var(--color-black-mixin);
                   color: var(--color-white);
@@ -145,7 +146,7 @@
       height: 41.97vw;
       .thirdContent {
         display: flex;
-        .thirdContent__content {
+        .thirdContentWrapper {
           display: flex;
           align-items: flex-start;
           justify-content: space-between;
@@ -188,7 +189,7 @@
             max-height: 52px;
           }
         }
-        .thirdContent__video {
+        .thirdContentVideo {
           max-width: 454px;
           width: 23.64vw;
           height: 100%;
@@ -481,7 +482,7 @@
                 }
               }
             }
-            #firstNthCard {
+            .firstSliderCard:nth-of-type(1) {
               display: flex;
               justify-content: center;
               .firstGalleryImage {
@@ -491,7 +492,7 @@
                 }
               }
             }
-            #secondNthCard {
+            .firstSliderCard:nth-of-type(2) {
               display: flex;
               justify-content: center;
               .firstGalleryImage {
@@ -501,7 +502,7 @@
                 }
               }
             }
-            #thirdNthCard {
+            .firstSliderCard:nth-of-type(3) {
               display: flex;
               align-items: center;
               justify-content: space-between;
@@ -554,7 +555,7 @@
       height: 78.78vw;
       .thirdContent {
         display: flex;
-        .thirdContent__content {
+        .thirdContentWrapper {
           display: flex;
           align-items: flex-start;
           justify-content: space-between;
@@ -594,7 +595,7 @@
             max-height: 52px;
           }
         }
-        .thirdContent__video {
+        .thirdContentVideo {
           display: none;
         }
       }
@@ -609,8 +610,6 @@
           width: 100%;
           padding: 40px 0 40px;
           .fourthSliderWrapper {
-            //display: flex;
-            //justify-content: space-between;
             .fourthSlide {
               max-width: 333px;
               max-height: 422px;
@@ -864,7 +863,7 @@
       height: 100.1vw;
       .thirdContent {
         display: flex;
-        .thirdContent__content {
+        .thirdContentWrapper {
           display: flex;
           align-items: flex-start;
           flex-direction: column;
@@ -895,7 +894,7 @@
             display: none;
           }
         }
-        .thirdContent__video {
+        .thirdContentVideo {
           display: none;
         }
       }
@@ -1086,7 +1085,7 @@
       padding-top: 40px;
       .thirdContent {
         display: flex;
-        .thirdContent__content {
+        .thirdContentWrapper {
           display: flex;
           align-items: flex-start;
           justify-content: space-between;
@@ -1117,7 +1116,6 @@
                 height: 100%;
                 img {
                   display: none;
-                  //max-height: 100%;
                 }
                 #thirdSliderImage {
                   width: 100%;
@@ -1134,7 +1132,7 @@
             display: none;
           }
         }
-        .thirdContent__video {
+        .thirdContentVideo {
           display: none;
         }
       }
