--- a/styles/visual.css
+++ b/styles/visual.css
@@ -202,6 +202,9 @@ header #menuContent .searchForm input {
     transform: translateX(-50%);
     border-radius: 5px;
 }
+.fourthSlideTextBlock {
+    color: var(--color-black-mixin);
+}
 hr {
     background-color: var(--color-grey);
     height: 2px;
